# junior-projects

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.opencode/: instructions.md  opencode.json
.opencode/agents/: mentor.md
docs/: learning.md  projects.md
src/project_name/: .gitkeep  __init__.py
tests/: __init__.py  test_example.py
